Add Run and Debug Locally CodeLens and Testing
Made changes to template.yml so, that Codelens will pick up Lambda functions and provide option to run and debug them locally.

Added linting tools that run with Lambda environments (black) (pylint, autopep8, astroid and wrapt do not).

Added testing infrastructure to repo.

--- a/template.yml
+++ b/template.yml
@@ -28,8 +28,9 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: !Sub "awscodestar-${ProjectId}-lambda-HelloWorld"
+      CodeUri: /
       Handler: index.handler
-      Runtime: python3.7
+      Runtime: python3.8
       Role:
         Fn::GetAtt:
           - LambdaExecutionRole
@@ -64,8 +65,9 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: !Sub "awscodestar-${ProjectId}-lambda-Hello"
+      CodeUri: /
       Handler: hello.handler
-      Runtime: python3.7
+      Runtime: python3.8
       Role:
         Fn::GetAtt:
           - LambdaExecutionRole
